package theory.behaviour.strategy.withStrategyPattern;

public interface FlyStrategy {

    void fly();
}
