package theory.behaviour.strategy.withStrategyPattern;

public interface QuackStrategy {
    void quack();
}
